# avatar-system

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_PUSH_GUIDE.md  LICENSE  MODELS_SETUP.md  QUICKSTART.md  README.md  SETUP.md  cleanup_phase1.py  download_wav2lip_model.py  git_push.sh  main.py  pyproject.toml  requirements.txt  test_generation_api.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: deployment.yaml  inference.yaml  model_config.yaml  pipeline_config.yaml
data/: avatar_system.db
docs/: ENHANCED_UI.md  QUICKSTART_COLAB.md
models/: api_models.py  audio_models.py  compatibility_patches.py  direct_api_models.py  model_comparison.py  optimized_models.py  sadtalker_integration.py  speech_pipeline.py  tts_generator.py  vad_detector.py  vision_models.py  wav2lip_model.py
scripts/: create_langfuse_dataset.py  create_test_assets.py  diagnose_sadtalker.py  download_models.py  health_check.py  init_database.py  remove_unicode.py  run_dataset_evaluation.py  setup.sh  test_generation.py  test_langfuse_config.py  test_langfuse_integration.py  verify_langfuse_integration.py
src/api/: endpoints.py  fastapi_app.py  websocket_api.py
src/audio_processor/: audio_loader.py  chunk_manager.py  feature_extractor.py  voice_activity.py
src/database/: db_manager.py  models.py
src/evaluation/: quality_metrics.py
src/model_wrapper/: hybrid_selector.py  inference_engine.py  model_loader.py  sadtalker_wrapper.py
src/monitor/: logger_config.py  performance_monitor.py
src/observability/: __init__.py  langfuse_callbacks.py  langfuse_config.py  langfuse_monitor.py  trace_decorators.py
src/orchestrator/: graph_builder.py  pipeline_runner.py  state_manager.py  workflow_nodes.py
tests/: test_optimized_models.py
web/: QUICKSTART_UI.md  index.html
(+36 files in other folders)
