[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "avatar-system-orchestrator"
version = "1.0.0"
description = "LangGraph-based Avatar Generation System with SadTalker"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["avatar", "talking-head", "langgraph", "sadtalker", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "torch>=2.0.0",
    "librosa>=0.10.0",
    "opencv-python>=4.8.0",
    "fastapi>=0.104.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/avatar-system-orchestrator"
Documentation = "https://github.com/yourusername/avatar-system-orchestrator/docs"
Repository = "https://github.com/yourusername/avatar-system-orchestrator"

[project.scripts]
avatar-gen = "main:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"
